more netsci satellites
more netsci satellites

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-03T16:25:21Z</date>
+						<date>2019-02-03T17:12:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3au0tMwrP616
-								P9l5Y2T59Q==
+								7GYV8hT+vhuZ
+								u8+RtunwIQ==
 								</data>
 								<key>Size</key>
-								<integer>305673</integer>
+								<integer>308106</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
