ISAL Alife link update
ISAL Alife link update

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -9848,7 +9848,7 @@
 					<key>page64 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:40:35Z</date>
+						<date>2019-02-03T20:31:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9967,11 +9967,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GwiaN2NVnq19
-								6VWhv4MJIw==
+								jNmPh0ryfvus
+								kWAmnrY2XA==
 								</data>
 								<key>Size</key>
-								<integer>85913</integer>
+								<integer>85038</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12810,7 +12810,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-03T19:40:43Z</date>
+						<date>2019-02-03T20:31:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12859,8 +12859,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								A1STSugQw73U
-								PtjOCZfDPw==
+								rLKjuxpZJEgi
+								HrZ6Ule9aA==
 								</data>
 								<key>Size</key>
 								<integer>5386</integer>
@@ -12912,7 +12912,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-03T19:40:43Z</date>
+						<date>2019-02-03T20:31:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13951,8 +13951,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1VXabGHus7oV
-								rxbSOFfE+w==
+								s/MPEi47RNTT
+								dlWgKBj3Nw==
 								</data>
 								<key>Size</key>
 								<integer>4519</integer>
@@ -14039,7 +14039,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HBA72fKI5HgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HBA8OVo7iigAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -14050,7 +14050,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEDvZ8okOaA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEDw5WjuxeA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
