--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-03T20:31:04Z</date>
+						<date>2019-02-03T20:34:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -154,11 +154,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jNmPh0ryfvus
-								kWAmnrY2XA==
+								WRWL+u+YuBmn
+								vULVfye+Vg==
 								</data>
 								<key>Size</key>
-								<integer>85038</integer>
+								<integer>85014</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
