NetCrime and registration times change
NetCrime and registration times change

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-03T19:14:19Z</date>
+						<date>2019-02-04T15:07:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -374,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qPZeQMlJuRg1
-								AodgzeH+MA==
+								uE1yLjwe0Mxu
+								12+S8Rm0jA==
 								</data>
 								<key>Size</key>
-								<integer>383324</integer>
+								<integer>384150</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2+mB3vV8OPVz
-								XfOwfgwXww==
+								brCfYPGR4EFe
+								+mzPAEMcJQ==
 								</data>
 								<key>Size</key>
-								<integer>308127</integer>
+								<integer>308113</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
