--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-04T15:07:51Z</date>
+						<date>2019-02-05T20:56:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								brCfYPGR4EFe
-								+mzPAEMcJQ==
+								dgAYAiA2Rxoi
+								jJx1sr+W+g==
 								</data>
 								<key>Size</key>
-								<integer>308113</integer>
+								<integer>306942</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
