netsci finance satellite
netsci finance satellite

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -7864,7 +7864,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-05T20:56:29Z</date>
+						<date>2019-02-06T15:24:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8203,11 +8203,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uE1yLjwe0Mxu
-								12+S8Rm0jA==
+								Lwvv2zPQC3p3
+								F59j8sXBRw==
 								</data>
 								<key>Size</key>
-								<integer>384150</integer>
+								<integer>384976</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -8223,11 +8223,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dgAYAiA2Rxoi
-								jJx1sr+W+g==
+								dPzBwCKOnEzJ
+								vSMB6ihBnQ==
 								</data>
 								<key>Size</key>
-								<integer>306942</integer>
+								<integer>308045</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12912,7 +12912,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-05T20:56:29Z</date>
+						<date>2019-02-06T15:24:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13951,8 +13951,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								69XdAcx1BLma
-								tUJkTPUj8Q==
+								5N5ZvSedFlkE
+								98EVWzbdbQ==
 								</data>
 								<key>Size</key>
 								<integer>3705</integer>
@@ -14039,8 +14039,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcEFGAE2
-				tvKAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcEFmdYD
+				xsGAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -14050,7 +14050,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcEFGAE2vnOA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcEFmdYDyZuA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
