--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-05T20:56:29Z</date>
+						<date>2019-02-06T15:24:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -374,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uE1yLjwe0Mxu
-								12+S8Rm0jA==
+								Lwvv2zPQC3p3
+								F59j8sXBRw==
 								</data>
 								<key>Size</key>
-								<integer>384150</integer>
+								<integer>384976</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dgAYAiA2Rxoi
-								jJx1sr+W+g==
+								dPzBwCKOnEzJ
+								vSMB6ihBnQ==
 								</data>
 								<key>Size</key>
-								<integer>306942</integer>
+								<integer>308045</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
