--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-06T16:11:30Z</date>
+						<date>2019-02-06T16:33:46Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -204,11 +204,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AjOIWbP9TIKj
-								hNbvHGxjaw==
+								XtMzQrWRigU6
+								EiP3I5vYiw==
 								</data>
 								<key>Size</key>
-								<integer>137205</integer>
+								<integer>136179</integer>
 							</dict>
 							<key>files/stacks_page_page59.js</key>
 							<dict>
@@ -224,11 +224,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								coN3qGioZtr5
-								dA1AdDihrQ==
+								D21+HDiMTNFl
+								nnj2xqMgnQ==
 								</data>
 								<key>Size</key>
-								<integer>67860</integer>
+								<integer>67477</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
