NetSci Regsitration Button
NetSci Regsitration Button

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:40:36Z</date>
+						<date>2019-02-10T13:59:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Zn35TMp0g9wM
-								vRz4swtD9A==
+								vJbVVQIYuvWd
+								vfUnh4JzNg==
 								</data>
 								<key>Size</key>
-								<integer>129150</integer>
+								<integer>129603</integer>
 							</dict>
 							<key>files/stacks_page_page54.js</key>
 							<dict>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RREv/cBVVi/D
-								Ll64ZEOXHg==
+								ekdpA6TJszOh
+								LF5HwEYhwA==
 								</data>
 								<key>Size</key>
-								<integer>59956</integer>
+								<integer>59935</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
