NetSci Registration buttons more and NetMed
NetSci Registration buttons more and NetMed

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:40:36Z</date>
+						<date>2019-02-11T15:17:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -194,11 +194,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Z+qZOc7ZD4vc
-								x9fq6v7/ew==
+								vyscmxLoJiQV
+								m7d06InzBw==
 								</data>
 								<key>Size</key>
-								<integer>169250</integer>
+								<integer>170971</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -214,11 +214,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KwJs/Cc9nyN0
-								eBWXxzf6rg==
+								DRfcZLZNWPVD
+								bT03ZMzopg==
 								</data>
 								<key>Size</key>
-								<integer>94702</integer>
+								<integer>95642</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
