--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-06T15:24:22Z</date>
+						<date>2019-02-11T15:25:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -374,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Lwvv2zPQC3p3
-								F59j8sXBRw==
+								mf3jIwhX+ga7
+								P6oM6FPM3w==
 								</data>
 								<key>Size</key>
-								<integer>384976</integer>
+								<integer>387871</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dPzBwCKOnEzJ
-								vSMB6ihBnQ==
+								MtVgUxN8hwwf
+								exjEC2o9TQ==
 								</data>
 								<key>Size</key>
-								<integer>308045</integer>
+								<integer>309954</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
