--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:40:35Z</date>
+						<date>2019-02-11T15:17:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -524,11 +524,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IutaVNvjEOdC
-								K13CVJErbw==
+								3wREVrCKoI12
+								ae2C+jJfZA==
 								</data>
 								<key>Size</key>
-								<integer>234781</integer>
+								<integer>236502</integer>
 							</dict>
 							<key>files/stacks_page_page57.js</key>
 							<dict>
@@ -544,11 +544,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lHqDsTliDQiM
-								FVo5J4v+0A==
+								iW81RseQpuGe
+								wpYDDkNn/g==
 								</data>
 								<key>Size</key>
-								<integer>144742</integer>
+								<integer>145666</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
