--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:40:35Z</date>
+						<date>2019-02-11T15:17:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -814,11 +814,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GGjL6fxzFfLu
-								hWKvkFs02A==
+								Gpze9qDes7Vd
+								TG0COC5ssQ==
 								</data>
 								<key>Size</key>
-								<integer>330254</integer>
+								<integer>331975</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -834,11 +834,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								y2HleyfX2qNP
-								K/X8vLaQdg==
+								rYpdEDKFkV23
+								C9oOYykXVA==
 								</data>
 								<key>Size</key>
-								<integer>246580</integer>
+								<integer>247504</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
