visa letter contact updated
visa letter contact updated

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-11T15:17:26Z</date>
+						<date>2019-02-11T15:44:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -194,11 +194,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vyscmxLoJiQV
-								m7d06InzBw==
+								ACn4m2C74yjF
+								FPI3UnBoOQ==
 								</data>
 								<key>Size</key>
-								<integer>170971</integer>
+								<integer>172145</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -214,11 +214,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DRfcZLZNWPVD
-								bT03ZMzopg==
+								fWYVz1Yo6t9s
+								025nHf54uQ==
 								</data>
 								<key>Size</key>
-								<integer>95642</integer>
+								<integer>96219</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
