posted undergrad fellowship COE
posted undergrad fellowship COE

--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:40:36Z</date>
+						<date>2019-02-12T21:14:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -152,11 +152,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Sr+gfqq30IdT
-								fncgB0T7ew==
+								9i29TCng64TJ
+								yHZsHc+mMw==
 								</data>
 								<key>Size</key>
-								<integer>167861</integer>
+								<integer>167911</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -172,11 +172,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SVJj/5QEiAYk
-								00TW4GxFMg==
+								7nGeOPa+2Bip
+								gKLrEQhY9w==
 								</data>
 								<key>Size</key>
-								<integer>87060</integer>
+								<integer>87367</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
