--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6474,7 +6474,7 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:40:36Z</date>
+						<date>2019-02-12T21:14:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6593,11 +6593,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Sr+gfqq30IdT
-								fncgB0T7ew==
+								9i29TCng64TJ
+								yHZsHc+mMw==
 								</data>
 								<key>Size</key>
-								<integer>167861</integer>
+								<integer>167911</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -6613,11 +6613,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								SVJj/5QEiAYk
-								00TW4GxFMg==
+								7nGeOPa+2Bip
+								gKLrEQhY9w==
 								</data>
 								<key>Size</key>
-								<integer>87060</integer>
+								<integer>87367</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12810,7 +12810,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-11T15:44:43Z</date>
+						<date>2019-02-12T21:14:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12859,11 +12859,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ai+2QzegcLl/
-								Wf9L6F+Hxg==
+								GgBKZb95py6y
+								QYnugtiuOw==
 								</data>
 								<key>Size</key>
-								<integer>5386</integer>
+								<integer>5354</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12912,7 +12912,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-11T15:44:43Z</date>
+						<date>2019-02-12T21:14:55Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13951,11 +13951,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VZadKqnPjEa/
-								7/7E2RczgQ==
+								ynJJ/HdPRtPF
+								vTBj/O8iZQ==
 								</data>
 								<key>Size</key>
-								<integer>4519</integer>
+								<integer>3705</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14039,8 +14039,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcEI5/kM
-				3sKAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcEJt2lw
+				sWCAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -14050,7 +14050,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcEI5/kM4NuA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcEJt2lwtd2A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
