--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Fellowships/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-12T21:14:55Z</date>
+						<date>2019-02-12T21:17:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -152,11 +152,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9i29TCng64TJ
-								yHZsHc+mMw==
+								Jwtm8eK8X0mN
+								hic0dAAMzA==
 								</data>
 								<key>Size</key>
-								<integer>167911</integer>
+								<integer>169085</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -172,11 +172,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7nGeOPa+2Bip
-								gKLrEQhY9w==
+								QphyQwDmFZPd
+								GpmZFjHi1g==
 								</data>
 								<key>Size</key>
-								<integer>87367</integer>
+								<integer>87945</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
