--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6474,7 +6474,7 @@
 					<key>page50 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-12T21:14:55Z</date>
+						<date>2019-02-12T21:17:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6593,11 +6593,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9i29TCng64TJ
-								yHZsHc+mMw==
+								Jwtm8eK8X0mN
+								hic0dAAMzA==
 								</data>
 								<key>Size</key>
-								<integer>167911</integer>
+								<integer>169085</integer>
 							</dict>
 							<key>files/stacks_page_page50.js</key>
 							<dict>
@@ -6613,11 +6613,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7nGeOPa+2Bip
-								gKLrEQhY9w==
+								QphyQwDmFZPd
+								GpmZFjHi1g==
 								</data>
 								<key>Size</key>
-								<integer>87367</integer>
+								<integer>87945</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -12912,7 +12912,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-12T21:14:55Z</date>
+						<date>2019-02-12T21:17:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13951,8 +13951,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ynJJ/HdPRtPF
-								vTBj/O8iZQ==
+								ipUXM+IMM4Pp
+								+91BaEnaPA==
 								</data>
 								<key>Size</key>
 								<integer>3705</integer>
@@ -14039,8 +14039,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcEJt2lw
-				sWCAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcEJt7DK
+				cOuAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -14050,7 +14050,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcEJt2lwtd2A
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcEJt7DKc2CA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
