--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Events-Calendar/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Events-Calendar/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:40:35Z</date>
+						<date>2019-02-13T17:10:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -142,11 +142,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Yfd+wykyj0HQ
-								AIwF2BC3Pw==
+								nQyN2CVl+vM8
+								+gdQh59Dmw==
 								</data>
 								<key>Size</key>
-								<integer>121504</integer>
+								<integer>116744</integer>
 							</dict>
 							<key>files/stacks_page_page60.js</key>
 							<dict>
@@ -162,11 +162,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9BBzAS6sSZ/A
-								ZqhcCE/97g==
+								YM8qPedXS65i
+								GKgamQpToQ==
 								</data>
 								<key>Size</key>
-								<integer>60128</integer>
+								<integer>56489</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
