--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:40:36Z</date>
+						<date>2019-02-13T17:10:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,11 +84,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								F+dfwd7uHuuG
-								Z6qcB8ASGg==
+								mty1JrvTmcfg
+								77Fx8Z7G2A==
 								</data>
 								<key>Size</key>
-								<integer>165796</integer>
+								<integer>171714</integer>
 							</dict>
 							<key>files/stacks_page_page56.js</key>
 							<dict>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hTcIeJr7TmqM
-								GmOvKxg/dw==
+								Mk828/Zj/Z/t
+								+tUpB8mdGw==
 								</data>
 								<key>Size</key>
-								<integer>79580</integer>
+								<integer>84831</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
