--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:40:36Z</date>
+						<date>2019-02-13T17:10:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -42,11 +42,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Am/OOc+m5dLd
-								fCg6vQ6olg==
+								AqEUSgJMarzl
+								i0ik11mxsw==
 								</data>
 								<key>Size</key>
-								<integer>53768</integer>
+								<integer>54103</integer>
 							</dict>
 							<key>index_files/small_109761.jpg</key>
 							<dict>
@@ -142,11 +142,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								yPrlzS722T1Q
-								NZ8p/uaNlA==
+								J6u441rEkDxN
+								3bAF2fQ2Vg==
 								</data>
 								<key>Size</key>
-								<integer>122577</integer>
+								<integer>122750</integer>
 							</dict>
 							<key>index_files/stacks_page_page16.js</key>
 							<dict>
