--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-11T15:25:32Z</date>
+						<date>2019-02-13T17:10:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								MtVgUxN8hwwf
-								exjEC2o9TQ==
+								Xf+LNt8bI9ih
+								jjXND6dQbw==
 								</data>
 								<key>Size</key>
-								<integer>309954</integer>
+								<integer>309960</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
